# dsqllint

./: .codecov.yml  .dscanner.ini  .gitignore  .gitlab-ci.yml  README.md  build.sh  dub.json  env.sh  meson.build  reggaefile.d
source/dsqllint/: app.d
source/dsqllint/parse/: file.d  lexer.d  parser.d
source/dsqllint/parse/ast/: astnode.d  context.d  object.d  package.d  tree.d  visitor.d
source/dsqllint/parse/ast/models/: orderspec.d  replacable.d
source/dsqllint/parse/ast/nodes/: argument.d  base.d  comment.d  declareitem.d  keep.d  limit.d  package.d  parameter.d
source/dsqllint/parse/ast/nodes/clause/: orderby.d  withsubquery.d
source/dsqllint/parse/ast/nodes/datatype/: array.d  idatatype.d  map.d  node.d  package.d
source/dsqllint/parse/ast/nodes/expression/: expression.d  name.d  package.d
source/dsqllint/parse/ast/nodes/hint/: hint.d  ihint.d
source/dsqllint/parse/ast/nodes/statement/: package.d  sequence.d  statement.d  tableelement.d
source/dsqllint/parse/ast/nodes/statement/select/: iquery.d  orderbyitem.d  package.d  select.d
source/dsqllint/parse/ast/nodes/statement/tablesource/: itablesource.d  tablesource.d
source/dsqllint/parse/ast/visitor/: package.d  visitor.d
source/dsqllint/parse/tokenize/: iterator.d  package.d  tok.d  tokens.d
source/dsqllint/utils/: filesearch.d  formatter.d  logger.d  message.d  printer.d  writer.d
tests/res/: invalid_ansi.sql  simple_comments.sql  valid_ansi.sql  valid_mssql.sql  valid_mysql.sql  valid_oracle.sql
tests/source/dsqllint/tests/: comments.d  select.d  sequence.d  tok_invalid.d  toks.d
